IVYPORTAL-10396: Enhance visibility of tasks and cases for Administrator in portal - added new icon - fix permission

--- a/AxonIvyPortal/PortalStyle/webContent/resources/ivy-icons/ivy-icon.css
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/ivy-icons/ivy-icon.css
@@ -398,3 +398,31 @@ Generated using nucleoapp.com
   content: "\ea41";
 }
 
+.ivyicon-navigation-right-circle-1::before {
+  content: "\ea42";
+}
+
+.ivyicon-navigation-up-circle::before {
+  content: "\ea43";
+}
+
+.ivyicon-navigation-right-circle-1-2::before {
+  content: "\ea44";
+}
+
+.ivyicon-synchronize-arrows::before {
+  content: "\ea45";
+}
+
+.ivyicon-delete::before {
+  content: "\ea46";
+}
+
+.ivyicon-alarm-bell-timer::before {
+  content: "\ea47";
+}
+
+.ivyicon-alert-circle::before {
+  content: "\ea48";
+}
+
